# Local-Chat-App

./: README.md
chat_client_app/: index.html  package-lock.json  package.json
chat_client_app/src/: App.css  App.tsx
chat_client_app/src-tauri/: Cargo.toml  tauri.conf.json
chat_client_app/src-tauri/src/: lib.rs  main.rs  ws_client.rs
chat_client_app/src/components/: Message.tsx
chat_ws_server/: .gitignore  Cargo.toml
chat_ws_server/src/: main.rs  ws_server.rs
