[package]
name = "chat_ws_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
tungstenite = "0.20"
serde = { version = "1", features = ["derive"] }   # For serializing/deserializing your message struct
serde_json = "1"                                   # For working with JSON
chrono = { version = "0.4", features = ["serde"] } # For handling timestamps easily
